cabal-version: 1.12
name:           reflex-glfw-simple
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/vagarenko/reflex-glfw-simple#readme>
homepage:       https://github.com/vagarenko/reflex-glfw-simple#readme
bug-reports:    https://github.com/vagarenko/reflex-glfw-simple/issues
author:         Alexey Vagarenko
maintainer:     vagarenko@gmail.com
copyright:      2020 Alexey Vagarenko
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/vagarenko/reflex-glfw-simple

library
  exposed-modules:
    Reflex.GLFW.Simple
  hs-source-dirs:
    src
  ghc-options:
    -Wall
  build-depends:
      base                 >=4.7 && <5
    , reflex               >=0.6.4
    , GLFW-b               >=3.2.1
  default-language:   Haskell2010

executable example
  main-is:             Main.hs
  build-depends:
      base                 >=4.7 && <5
    , reflex-glfw-simple
    , reflex               >=0.6.4
    , reflex-basic-host    >=0.2
    , GLFW-b               >=3.2.1
    , witherable           >=0.3
    , stm                  >=2.5
  hs-source-dirs:     example
  ghc-options:        -Wall -threaded -rtsopts
  default-language:   Haskell2010
