cabal-version: 1.12
name:           reflex-glfw-simple
version:        0.2.0.0
description:    Please see the README on GitHub at <https://github.com/vagarenko/reflex-glfw-simple#readme>
homepage:       https://github.com/vagarenko/reflex-glfw-simple#readme
bug-reports:    https://github.com/vagarenko/reflex-glfw-simple/issues
author:         Alexey Vagarenko
maintainer:     vagarenko@gmail.com
copyright:      2020 Alexey Vagarenko
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/vagarenko/reflex-glfw-simple

library
  hs-source-dirs: src
  exposed-modules:
      Reflex.GLFW.Simple
    , Reflex.GLFW.Simple.Events
  ghc-options:
    -Wall
  build-depends:
      base                 >=4.7 && <5
    , reflex               >=0.8.2
    , GLFW-b               >=3.3
  default-language:   Haskell2010

executable example
  hs-source-dirs:     example
  main-is:             Main.hs
  build-depends:
      base                 >=4.7 && <5
    , reflex-glfw-simple
    , reflex               >=0.8.2
    , GLFW-b               >=3.3
    , witherable           >=0.3
  ghc-options:        -Wall -threaded -rtsopts
  default-language:   Haskell2010
